force-app/main/default/objects/Intacct_Integration_Settings__c/Intacct_Integration_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Intacct Integration Settings</label>
</CustomObject>