force-app/main/default/objects/Intacct_Integration_Settings__c/fields/Intacct_Gateway_URL__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Gateway_URL__c</fullName>
    <label>Gateway URL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>