force-app/main/default/objects/Intacct_Integration_Settings__c/fields/Intacct_Password__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Password__c</fullName>
    <label>Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>