force-app/main/default/objects/Intacct_Integration_Settings__c/fields/Intacct_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Intacct_User_ID__c</fullName>
    <label>User ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>